Revert "Merge branch 'magic_oak_uat' of https://github.com/metasfresh/metasfresh into magic_oak_uat"
(Attempt to) revert the accidental merge or master into magic_oak_uat

This reverts commit d8c4a0b7ccfa064b73cfe037e9f90b8a6832130a, reversing
changes made to dbaee5f6bf00460816dd8d5ff5fb880bb5033858.