@@ -2,10 +2,7 @@ package org.adempiere.ad.migration.logger;
 
 import com.google.common.base.MoreObjects;
 import de.metas.logging.LogManager;
-import de.metas.util.ILoggable;
-import de.metas.util.Loggables;
 import lombok.NonNull;
-import lombok.Setter;
 import org.adempiere.ad.trx.api.ITrx;
 import org.adempiere.ad.trx.spi.TrxOnCommitCollectorFactory;
 import org.adempiere.exceptions.AdempiereException;
@@ -24,7 +21,6 @@ import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.Optional;
 
 /*
  * #%L
@@ -52,16 +48,17 @@ import java.util.Optional;
  * SQL migration script file logger.
  *
  * @author metas-dev <dev@metasfresh.com>
+ *
  */
-class MigrationScriptFileLogger
+public class MigrationScriptFileLogger
 {
-	public static MigrationScriptFileLogger newForPostgresql()
+	public static MigrationScriptFileLogger of(final String dbType)
 	{
-		return new MigrationScriptFileLogger("postgresql");
+		return new MigrationScriptFileLogger(dbType);
 	}
 
 	private static final Logger logger = LogManager.getLogger(MigrationScriptFileLogger.class);
-	@NonNull @Setter private ILoggable watcher = Loggables.console();
+
 	private static final Charset CHARSET = StandardCharsets.UTF_8;
 	private static final DateTimeFormatter FORMATTER_ScriptFilenameTimestamp = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
@@ -70,7 +67,7 @@ class MigrationScriptFileLogger
 	@Nullable private static Path _migrationScriptsDirectory;
 
 	private static final String COLLECTOR_TRXPROPERTYNAME = MigrationScriptFileLogger.class.getName() + ".collectorFactory";
-	private final TrxOnCommitCollectorFactory<StringBuilder, Sql> collectorFactory = new TrxOnCommitCollectorFactory<>()
+	private final TrxOnCommitCollectorFactory<StringBuilder, Sql> collectorFactory = new TrxOnCommitCollectorFactory<StringBuilder, Sql>()
 	{
 
 		@Override
@@ -116,14 +113,13 @@ class MigrationScriptFileLogger
 				return;
 			}
 
-			watcher.addLog("\n"
-					+ "---------------------------------------------------------------------------"
-					+ "Discarding following SQL statements, due to transaction rollback:\n"
-					+ sqlStatements
-					+ "---------------------------------------------------------------------------"
-					+ "\n"
-			);
-			watcher.flush();
+			System.out.println("\n");
+			System.out.println("---------------------------------------------------------------------------");
+			System.out.println("Discarding following SQL statements, due to transaction rollback:\n");
+			System.out.println(sqlStatements);
+			System.out.println("---------------------------------------------------------------------------");
+			System.out.println("\n");
+			System.out.flush();
 		}
 	};
 
@@ -162,15 +158,12 @@ class MigrationScriptFileLogger
 		if (_path == null || !Files.exists(_path))
 		{
 			final Path path = createPath(dbType);
-			watcher.addLog("Using scripts path: " + path);
+			System.out.println("Using scripts path: " + path);
 
+			//
+			// Make sure the directories exist
 			try
 			{
-				final String fileHeader = "-- Run mode: " + Ini.getRunMode() + "\n\n";
-				Files.writeString(path, fileHeader, CHARSET, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
-
-				//
-				// Make sure the directories exist
 				Files.createDirectories(path.getParent());
 			}
 			catch (final IOException ex)
@@ -183,10 +176,11 @@ class MigrationScriptFileLogger
 		return _path;
 	}
 
-	public final Optional<Path> getFilePathIfPresent() {return Optional.ofNullable(getFilePathOrNull());}
-
 	@Nullable
-	private synchronized Path getFilePathOrNull() {return _path;}
+	public final synchronized Path getFilePathOrNull()
+	{
+		return _path;
+	}
 
 	public static Path getMigrationScriptDirectory()
 	{
@@ -207,18 +201,13 @@ class MigrationScriptFileLogger
 
 	/**
 	 * Appends given SQL statement.
-	 * <p>
+	 *
 	 * If this method is called within a database transaction then the SQL statement will not be written to file directly,
 	 * but it will be collected and written when the transaction is committed.
 	 */
 	public synchronized void appendSqlStatement(@NonNull final Sql sqlStatement)
 	{
 		collectorFactory.collect(sqlStatement);
-	}
-
-	public synchronized void appendSqlStatements(@NonNull final SqlBatch sqlBatch)
-	{
-		sqlBatch.streamSqls().forEach(collectorFactory::collect);
 	}
 
 	private synchronized void appendNow(final String sqlStatements)
@@ -231,23 +220,24 @@ class MigrationScriptFileLogger
 		try
 		{
 			final Path path = getCreateFilePath();
-			Files.writeString(path, sqlStatements, CHARSET, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+			final byte[] bytes = sqlStatements.getBytes(CHARSET);
+			Files.write(path, bytes, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
 		}
 		catch (final IOException ex)
 		{
-			logger.error("Failed writing to {}:\n {}", this, sqlStatements, ex);
+			logger.error("Failed writting to {}:\n {}", this, sqlStatements, ex);
 			close(); // better to close the file ... so, next time a new one will be created
 		}
 	}
 
 	/**
 	 * Close underling file.
-	 * <p>
+	 *
 	 * Next time, {@link #appendSqlStatement(Sql)} will be called, a new file will be created, so it's safe to call this method as many times as needed.
 	 */
 	public synchronized void close()
 	{
-		watcher.addLog("Closed migration script: " + _path);
+		System.out.println("Closed migration script: " + _path);
 		_path = null;
 	}
 }
